--- a/indx.html
+++ b/indx.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/main.css">
     <title>TiaLib</title>
 </head>
+<style>
+    *
+    {
+        margin: 0;
+        padding: 0;
+    }
+
+    body
+    {
+        background-color: rgb(56, 56, 56);
+        height: 100dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 <body>
     
     <!-- toggle button -->
